--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=prod
+spring.profiles.active=dev
 spring.application.name=connect
 
 spring.mvc.servlet.load-on-startup=1
@@ -44,7 +44,10 @@ spring.redis.lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.min-idle=0
 spring.redis.lettuce.pool.max-wait=-1ms
 
-jwt.secret=${JWT_SECRET}
+jwt.secret-key=${JWT_SECRET}
+jwt.access-token-expiration-milliseconds=3600000
+jwt.refresh-token-expiration-milliseconds=604800000
+
 ranking.key=projectRanking:products
 event.key.prefix=product:event:
 spring.ai.openai.api-key=${OPENAI_API_KEY}
